--- a/deployments.ipynb
+++ b/deployments.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "8db3bf7a-e76a-4d9a-9f63-c4bf8b674750",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3443,6 +3444,22 @@
     "  --allow-unauthenticated \\\n",
     "  --memory=2Gi \\\n",
     "  --set-env-vars=PROJECT_ID=onlyjobs-465420,LOCATION=us-central1,BQ_DATASET_ID=user_data,BQ_RAW_TABLE_ID=job_applications,FIRESTORE_DATABASE_ID=emails-firestore\n",
+    "\n",
+    "WITH NEW SUB/PUB TOPIC FOR DATA DROPPING INTO BQ:\n",
+    "\n",
+    "cd /home/jupyter/onlyjobs\n",
+    "\n",
+    "gcloud builds submit \\\n",
+    "  --tag gcr.io/onlyjobs-465420/process-emails \\\n",
+    "  ./backend/services/process_emails\n",
+    "\n",
+    "gcloud run deploy process-emails \\\n",
+    "  --image gcr.io/onlyjobs-465420/process-emails \\\n",
+    "  --region=us-central1 \\\n",
+    "  --platform=managed \\\n",
+    "  --allow-unauthenticated \\\n",
+    "  --memory=2Gi \\\n",
+    "  --set-env-vars=PROJECT_ID=onlyjobs-465420,LOCATION=us-central1,BQ_DATASET_ID=user_data,BQ_RAW_TABLE_ID=job_applications,FIRESTORE_DATABASE_ID=emails-firestore,PUBSUB_TOPIC=applications-ready-topic\n",
     "\n"
    ]
   },
@@ -3510,7 +3527,10 @@
   {
    "cell_type": "markdown",
    "id": "83744f17-5e15-4c3d-84cf-df7157f5c66f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# 3. backend/functions/gmail_fetch"
    ]
@@ -3601,12 +3621,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ce77291-09bb-47a6-a58b-5b8d8fcccdec",
+   "cell_type": "markdown",
+   "id": "e7c4a0fd-2d07-436e-8b16-9b728167edaf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 4. DBT_Trigger"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "fed79b21-ca77-455f-a7d9-78e5edc243bc",
+   "metadata": {},
+   "source": [
+    "cd /home/jupyter/onlyjobs\n",
+    "\n",
+    "gcloud functions deploy run-dbt-on-applications \\\n",
+    "  --runtime python310 \\\n",
+    "  --trigger-topic applications-ready-topic \\\n",
+    "  --service-account 12002195951-compute@developer.gserviceaccount.com \\\n",
+    "  --region us-central1 \\\n",
+    "  --entry-point run_dbt \\\n",
+    "  --source=backend/functions/dbt_trigger \\\n",
+    "  --set-env-vars=PROJECT_ID=onlyjobs-465420,DBT_DIR=backend/dbt,DBT_TARGET=dev\n"
+   ]
   }
  ],
  "metadata": {
