chore(dbt): add profiles.yml for Cloud Build

--- a/deployments.ipynb
+++ b/deployments.ipynb
@@ -3644,6 +3644,29 @@
     "  --source=backend/functions/dbt_trigger \\\n",
     "  --set-env-vars=PROJECT_ID=onlyjobs-465420,DBT_DIR=backend/dbt,DBT_TARGET=dev\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09bd480b-96ca-42c1-a1a1-a7f775699136",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1) Publish your test message\n",
+    "gcloud pubsub topics publish applications-ready-topic --message=\"{}\"\n",
+    "\n",
+    "# 2) Wait a few seconds, then grab the latest build ID\n",
+    "BUILD_ID=$(gcloud builds list \\\n",
+    "  --project=onlyjobs-465420 \\\n",
+    "  --sort-by=\"~CREATE_TIME\" \\\n",
+    "  --limit=1 \\\n",
+    "  --format=\"value(ID)\")\n",
+    "\n",
+    "echo \"Latest build ID: $BUILD_ID\"\n",
+    "\n",
+    "# 3) Stream its logs\n",
+    "gcloud beta builds log \"$BUILD_ID\" --project=onlyjobs-465420 --stream\n"
+   ]
   }
  ],
  "metadata": {
