dbt: Still working on connecting BQ to trigger DBT. Pause for sync/fetch

--- a/deployments.ipynb
+++ b/deployments.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "id": "8db3bf7a-e76a-4d9a-9f63-c4bf8b674750",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3433,18 +3432,6 @@
    "source": [
     "1. Build and Deploy\n",
     "\n",
-    "cd /home/jupyter/onlyjobs\n",
-    "\n",
-    "gcloud builds submit --tag gcr.io/onlyjobs-465420/process-emails ./backend/services/process_emails\n",
-    "\n",
-    "gcloud run deploy process-emails \\\n",
-    "  --source=./backend/services/process_emails \\\n",
-    "  --region=us-central1 \\\n",
-    "  --platform=managed \\\n",
-    "  --allow-unauthenticated \\\n",
-    "  --memory=2Gi \\\n",
-    "  --set-env-vars=PROJECT_ID=onlyjobs-465420,LOCATION=us-central1,BQ_DATASET_ID=user_data,BQ_RAW_TABLE_ID=job_applications,FIRESTORE_DATABASE_ID=emails-firestore\n",
-    "\n",
     "WITH NEW SUB/PUB TOPIC FOR DATA DROPPING INTO BQ:\n",
     "\n",
     "cd /home/jupyter/onlyjobs\n",
@@ -3459,8 +3446,7 @@
     "  --platform=managed \\\n",
     "  --allow-unauthenticated \\\n",
     "  --memory=2Gi \\\n",
-    "  --set-env-vars=PROJECT_ID=onlyjobs-465420,LOCATION=us-central1,BQ_DATASET_ID=user_data,BQ_RAW_TABLE_ID=job_applications,FIRESTORE_DATABASE_ID=emails-firestore,PUBSUB_TOPIC=applications-ready-topic\n",
-    "\n"
+    "  --set-env-vars=PROJECT_ID=onlyjobs-465420,LOCATION=us-central1,BQ_DATASET_ID=user_data,BQ_RAW_TABLE_ID=job_applications,FIRESTORE_DATABASE_ID=emails-firestore,PUBSUB_TOPIC=applications-ready-topic\n"
    ]
   },
   {
@@ -3528,7 +3514,6 @@
    "cell_type": "markdown",
    "id": "83744f17-5e15-4c3d-84cf-df7157f5c66f",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3563,6 +3548,13 @@
     "curl -X POST \"https://gmail-fetch-12002195951.us-central1.run.app/fetch?backfill=true\"\n",
     "\n",
     "curl -X POST https://gmail-fetch-12002195951.us-central1.run.app/fetch\n",
+    "\n",
+    "\n",
+    "curl -X POST \\\n",
+    "\"https://gmail-fetch-12002195951.us-central1.run.app/fetch?uid=rLGf2myxGbXFJ8rPqX9yCKiDzrS2\"\n",
+    "\n",
+    "curl -X POST \\\n",
+    "\"https://gmail-fetch-12002195951.us-central1.run.app/fetch?uid=rLGf2myxGbXFJ8rPqX9yCKiDzrS2&backfill=true\"\n",
     "\n",
     "Logs:\n",
     "1. Check if anything was published\n",
@@ -3635,7 +3627,7 @@
    "source": [
     "cd /home/jupyter/onlyjobs\n",
     "\n",
-    "gcloud functions deploy run-dbt-on-applications \\\n",
+    "gcloud functions deploy dbt-trigger \\\n",
     "  --runtime python310 \\\n",
     "  --trigger-topic applications-ready-topic \\\n",
     "  --service-account 12002195951-compute@developer.gserviceaccount.com \\\n",
